--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/nadjitan"
   },
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Template for a react component library.",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -12,6 +12,7 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
+    "pub": "rollup -c && npm publish",
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
